# MiQi

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README_zh.md  core_agent_lines.sh  docker-compose.yml  miqi.spec  mkdocs.yml  pyproject.toml
desktop/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/sidecars/miqi-desktop-backend/: Cargo.toml
desktop/src-tauri/sidecars/miqi-desktop-backend/src/: main.rs
desktop/src-tauri/src/: lib.rs  main.rs
docs/: API.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  RAM_FIRST_MEMORY_CHECKPOINT.md  SECURITY.md  SECURITY_IMPROVEMENTS.md  SELF_DEVELOPMENT.md  architecture.md  cli-reference.md  configuration.md  contributing.md  desktop-architecture.md  desktop-design.md  desktop-frontend-backend-test-runbook.md  desktop.md  developer-guide.md  getting-started.md  index.md  mcp-integration.md  memory-system.md  security.md  self-improvement.md
miqi/: __main__.py
scripts/: configure_mcps.sh  desktop_stdio_smoke.py  setup_mcps.sh
tests/: test_approval.py  test_cli_input.py  test_commands.py  test_config_pdf2zh.py  test_consolidate_offset.py  test_context_work_dir.py  test_cron_commands.py  test_cron_service.py  test_docker.sh  test_email_channel.py  test_events.py  test_execution.py  test_experience_bridge.py  test_experience_store.py  test_heartbeat_service.py  test_ipc.py  test_memory_context_service.py  test_provider_retry.py  (+13 more)
(+209 files in other folders)
