[package]
name = "miqi-desktop"
version = "0.1.0"
edition = "2021"
description = "MiQi Desktop App"

[lib]
name = "miqi_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
